Fix: Missing gaps in Builder/admin UIs

--- a/www/comps/admin/admin.css
+++ b/www/comps/admin/admin.css
@@ -123,7 +123,7 @@
 .admin-system-msg{}
 .admin-system-msg-date{
 	width:370px;
-	padding:3px 0px;
+	padding:3px 6px;
 	position:relative;
 	box-shadow:var(--shadow-input);
 	border-radius:5px;
